# CRYPTOCAM-RELEASE-SCRIPTS

./: .config.toml  .gitignore  .gitlab-ci.yml  .gitmodules  AppImageBuilder.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  WindowsCrosscompile.Dockerfile  build.gradle  build.rs  complete_build.sh  decrypt.sh  documentation.txt  fileformat.md  gradle.properties  main.py  opportunities.txt  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/debug/: output-metadata.json
app/libs/: camera-camera2-release.aar  camera-core-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.txt
app/src/main/cpp/: AudioInfo.h  CustomAVIOContext.cpp  CustomAVIOContext.h  VideoInfo.h  VideoMuxer.cpp  VideoMuxer.h  log.h  main.cpp
app/src/main/java/androidx/camera/camera2/: MyCamera2Config.java
app/src/main/java/androidx/camera/core/: EncodedBufferHandler.java  VideoStreamCapture.java
app/src/main/java/com/tnibler/cryptocam/: ApiConstants.kt  App.kt  CameraFragment.kt  CameraSettings.kt  EncryptionException.kt  MainActivity.kt  OpenPgpManager.kt  OpenPgpNotBoundException.kt  Orientation.kt  OutputFileManager.kt  PermissionRationaleActivity.kt  PhotoFragment.kt  PhotoKey.kt  PhotoViewModel.kt  RecordTileService.kt  RecordingManager.kt  RecordingParams.kt  RecordingService.kt  SelectedCamera.kt  StartReceiverActivity.kt  VideoFragment.kt  VideoKey.kt  VolumeKeyPressListener.kt
app/src/main/java/com/tnibler/system/: ApiConstants.kt  App.kt  MainActivity.kt  Orientation.kt  OutputFileManager.kt  PermissionRationaleActivity.kt  RecordTileService.kt  RecordingParams.kt  SelectedCamera.kt  (+2 more)
app/src/main/res/drawable/: bg_border.xml  bg_recording_time.xml  dot_recording.xml  ic_focus.xml  ic_folder_color.xml  ic_key_color.xml  ic_launcher_foreground.xml  ic_openkeychain_logo.xml  ic_record_video.xml  ic_stop_video.xml  ic_take_photo.xml  overlay_padlock.xml  overlay_photo_feedback.xml  overlay_text.xml
app/src/main/res/layout/: activity_main.xml  activity_permission_rationale.xml  background_recording.xml  camera_screen.xml  check_openkeychain.xml  custom_notification_pixel.xml  custom_notification_samsung.xml  edit_key.xml  import_key.xml  info_background_recording.xml  install_openkeychain.xml  key_detail.xml  key_item.xml  key_list.xml  licenses.xml  photo_screen.xml  photo_viewer.xml  pick_key.xml  pick_out_directory.xml  preference_framerate.xml  scan_key.xml  video_screen.xml  website_info.xml
app/src/main/res/menu/: key_detail.xml  key_list.xml
app/src/main/res/navigation/: nav.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
(+150 files in other folders)
